sync_signal_log.txt
  File "C:\EA_AI\tools\sync_ai_signals.py", line 12
    if sig
          ^
SyntaxError: expected ':'
